--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 	<head>
 	<meta charset="UTF-8">
 		<title>La Iluminada - Ilumina Tu Vida</title>
+		<link rel="stylesheet" type="text/css" href="css/styles.css" media="screen">
 	</head>
 	<body>
 		<h1>Pon un título aquí</h1>
