creacion del nav

--- a/index.html
+++ b/index.html
@@ -1,10 +1,18 @@
 <html>
 	<head>
-	<meta charset="UTF-8">
+		<meta charset="UTF-8">
 		<title>La Iluminada - Ilumina Tu Vida</title>
 		<link rel="stylesheet" type="text/css" href="css/styles.css" media="screen">
 	</head>
 	<body>
-		<h1>Pon un título aquí</h1>
+		<nav>
+			<a href="#"><img src="img/lailuminada.png"></a>
+			<ul>
+				<li>acasd</li>
+				<li>asdacs</li>
+				<li>assadc</li>
+				<li>adfsfe</li>
+			</ul>
+		</nav>
 	</body>
 </html>
