--- a/productos/productos.html
+++ b/productos/productos.html
@@ -1,4 +1,50 @@
 <html>
 	<head></head>
-	
+	<body>
+		<header>
+			<h1>Productos</h1>
+			<p></p>
+
+			
+		</header>
+		<content>
+			<h2>Luces de Exterior</h2>
+			<p></p>
+
+			<div>
+				<ul>
+					<li>
+						<div>
+							<h3></h3>
+							<p></p>
+							<a href="#"></a>
+						</div>
+					</li>
+					<li></li>
+					<li></li>
+					<li></li>
+					<li></li>
+					<li></li>
+					<li></li>
+					<li></li>
+				</ul>
+			</div>
+		</content>
+		<footer>
+			<div>
+				<a></a>
+				<a></a>
+				<a></a>
+			</div>
+			<img src="#">
+			<div>
+				<ul>
+					<li class="footer-social"></li>
+					<li class="footer-social"></li>
+					<li class="footer-social"></li>
+				</ul>
+			</div>
+		</footer>
+	</body>
+
 </html>
