Se agregó la estructura básica de productos.html

--- a/productos/productos.html
+++ b/productos/productos.html
@@ -8,26 +8,89 @@
 			
 		</header>
 		<content>
-			<h2>Luces de Exterior</h2>
-			<p></p>
-
-			<div>
-				<ul>
-					<li>
-						<div>
-							<h3></h3>
-							<p></p>
-							<a href="#"></a>
-						</div>
-					</li>
-					<li></li>
-					<li></li>
-					<li></li>
-					<li></li>
-					<li></li>
-					<li></li>
-					<li></li>
-				</ul>
+			<h2>Todos los Productos</h2>
+			<p class="paragraph-category"></p>
+			<div class="div-category">
+				<div class="div-cat-principal">
+					<div class="deco-top"></div>
+					<div class="deco-lower"></div>
+					<div class="div-information">
+					<div>
+						<h3>Circle bell</h3>
+						<p>Cada bombilla LED se codifica con una carta para ayudarle a identificar la forma perfecta para su fijación.</p>
+						<a href="">Ver más</a>
+					</div>
+				</div>
+				<div>
+					<div class="deco-top"></div>
+					<div class="deco-lower"></div>
+					<div class="div-information">
+					<div>
+						<h3>Circle bell double</h3>
+						<p>Cada bombilla LED se codifica con una carta para ayudarle a identificar la forma perfecta para su fijación.</p>
+						<a href="">Ver más</a>
+					</div>
+				</div>
+				<div>
+					<div class="deco-top"></div>
+					<div class="deco-lower"></div>
+					<div class="div-information">
+					<div>
+						<h3>Grass Espontaneus</h3>
+						<p>Cada bombilla LED se codifica con una carta para ayudarle a identificar la forma perfecta para su fijación.</p>
+						<a href="">Ver más</a>
+					</div>
+				</div>
+				<div>
+					<div class="deco-top"></div>
+					<div class="deco-lower"></div>
+					<div class="div-information">
+					<div>
+						<h3>Light block</h3>
+						<p>Cada bombilla LED se codifica con una carta para ayudarle a identificar la forma perfecta para su fijación.</p>
+						<a href="">Ver más</a>
+					</div>
+				</div>
+				<div>
+					<div class="deco-top"></div>
+					<div class="deco-lower"></div>
+					<div class="div-information">
+					<div>
+						<h3>Led Air</h3>
+						<p>Cada bombilla LED se codifica con una carta para ayudarle a identificar la forma perfecta para su fijación.</p>
+						<a href="">Ver más</a>
+					</div>
+				</div>
+				<div>
+					<div class="deco-top"></div>
+					<div class="deco-lower"></div>
+					<div class="div-information">
+					<div>
+						<h3>Alumbrado Público</h3>
+						<p>Cada bombilla LED se codifica con una carta para ayudarle a identificar la forma perfecta para su fijación.</p>
+						<a href="">Ver más</a>
+					</div>
+				</div>
+				<div>
+					<div class="deco-top"></div>
+					<div class="deco-lower"></div>
+					<div class="div-information">
+					<div>
+						<h3>Circle bell</h3>
+						<p>Cada bombilla LED se codifica con una carta para ayudarle a identificar la forma perfecta para su fijación.</p>
+						<a href="">Ver más</a>
+					</div>
+				</div>
+				<div>
+					<div class="deco-top"></div>
+					<div class="deco-lower"></div>
+					<div class="div-information">
+					<div>
+						<h3>Circle bell</h3>
+						<p>Cada bombilla LED se codifica con una carta para ayudarle a identificar la forma perfecta para su fijación.</p>
+						<a href="">Ver más</a>>
+					</div>
+				</div>
 			</div>
 		</content>
 		<footer>
