estructura del header

--- a/index.html
+++ b/index.html
@@ -5,14 +5,30 @@
 		<link rel="stylesheet" type="text/css" href="css/styles.css" media="screen">
 	</head>
 	<body>
-		<nav>
-			<a href="#"><img src="img/lailuminada.png"></a>
-			<ul>
-				<li>acasd</li>
-				<li>asdacs</li>
-				<li>assadc</li>
-				<li>adfsfe</li>
-			</ul>
-		</nav>
+		<header>
+			<nav class="header-nav">
+				<a href="#"><img src="img/lailuminada.png"></a>
+				<ul>
+		            <li><a href="#">Inicio</a></li>
+		            <li><a href="#">Productos</a>
+			            <ul>
+			            	<li><a href="#">Todos los Productos</a></li>
+				            <li><a href="#">Luces de Exterior</a></li>
+				            <li><a href="#">Luces de interior</a></li>
+				            <li><a href="#">Luces led</a></li>
+				            <li><a href="#">Luces de habitacion</a></li>  
+			            </ul>
+		            </li>
+		            <li><a href="#">Proyectos</a></li>
+		            <li><a href="#">Noticias</a></li>
+		            <li><a href="#">Contactos</a></li>
+          		</ul>
+			</nav><!-- header-nav -->
+			<div class="title-header">
+				<h1>Iluminando tu vida</h1>
+				<p>Productos diseñados para tu hogar pensando en ti.</p>
+			</div>
+			<button><a href="">Nuestros Productos</a></button>
+		</header>	
 	</body>
 </html>
