--- a/productos/luces-habitacion.html
+++ b/productos/luces-habitacion.html
@@ -1,7 +1,7 @@
 <html>
 	<head>
 		<meta charset="UTF-8">
-		<title>Productos - La Iluminada</title>
+		<title>Luces de Habitación - La Iluminada</title>
 		<link rel="stylesheet" type="text/css" href="../css/styles.css">
 	</head>
 	<body>
