--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
 	<head>
 		<meta charset="UTF-8">
@@ -5,10 +6,10 @@
 		<link rel="stylesheet" type="text/css" href="css/styles.css" media="screen">
 	</head>
 	<body>
-		<header>
+		<header class="header-home">
 			<nav class="header-nav">
-				<a href="#"><img src="img/lailuminada.png"></a>
-				<ul>
+				<a href="#"><img class="logo" src="img/lailuminada.png"></a>
+				<ul class="first-nav">
 		            <li><a href="#">Inicio</a></li>
 		            <li><a href="#">Productos</a>
 			            <ul>
