Se estructuro bien productos.html

--- a/productos/productos.html
+++ b/productos/productos.html
@@ -7,8 +7,8 @@
 	<body>
 		<header class="header-products">
 			<nav class="header-nav">
-				<a href="#"><img src="../img/lailuminada.png"></a>
-				<ul>
+				<a href="#"><img class="logo" src="../img/lailuminada.png"></a>
+				<ul class="first-nav">
 		            <li><a href="#">Inicio</a></li>
 		            <li><a href="#">Productos</a>
 			            <ul>
@@ -24,15 +24,17 @@
 		            <li><a href="#">Contactos</a></li>
           		</ul>
 			</nav><!-- header-nav -->
-			<div class="title-header">
+			<div class="title-header-products">
 			    <h1>Productos</h1>
 
-			    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean rutrum, urna eget rhoncus congue, augue erat porttitor purus, non iaculis tellus ex eget metus. Proin sollicitudin pretium sem sed dapibus. Etiam commodo vulputate nisl vel pharetra. Nulla vehicula lobortis arcu non fermentum. </p>
+			    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean rutrum, urna eget rhoncus congue, augue erat porttitor purus, non iaculis tellus ex eget metus.</p>
 			</div><!-- title-header -->
 		</header>
-		<content>
+		<section class="section-content">
 			<h2>Todos los Productos</h2>
-			<p class="paragraph-category"></p>
+			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.<br/>
+			Nullam eu orci placerat, posuere augue vehicula, semper leo. 
+			</p>
 			<div class="div-category">
 				<div class="div-cat-principal">
 					<div class="deco-top"></div>
@@ -115,14 +117,14 @@
 					</div>
 				</div><!-- div-cat-principal -->
 			</div>
-		</content>
+		</section>
 		<footer>
 			<div>
-				<a>00000000</a>
-				<a>00000000</a>
-				<a>corre0</a>
+				<a href="#">00000000</a>
+				<a href="#">00000000</a>
+				<a href="#">corre0</a>
 			</div>
-			<img src="#">
+			<a href="#"><img class="logo" src="../img/lailuminada.png"></a>
 			<div>
 				<ul>
 					<li class="footer-social"></li>
