estilos del nav

--- a/index.html
+++ b/index.html
@@ -8,11 +8,12 @@
 	<body>
 		<header class="header-home">
 			<nav class="header-nav">
-				<a href="#"><img class="logo" src="img/lailuminada.png"></a>
+				
 				<ul class="first-nav">
-		            <li><a href="#">Inicio</a></li>
-		            <li><a href="#">Productos</a>
-			            <ul>
+					<li class="li-logo"><a href="#"><img class="logo" src="img/lailuminada.png"></a></li>
+		            <li class="first-li"><a href="#">Inicio</a></li>
+		            <li class="first-li"><a href="#">Productos</a>
+			            <ul class="sub-menu">
 			            	<li><a href="#">Todos los Productos</a></li>
 				            <li><a href="#">Luces de Exterior</a></li>
 				            <li><a href="#">Luces de interior</a></li>
@@ -20,9 +21,9 @@
 				            <li><a href="#">Luces de habitacion</a></li>  
 			            </ul>
 		            </li>
-		            <li><a href="#">Proyectos</a></li>
-		            <li><a href="#">Noticias</a></li>
-		            <li><a href="#">Contactos</a></li>
+		            <li class="first-li"><a href="#">Proyectos</a></li>
+		            <li class="first-li"><a href="#">Noticias</a></li>
+		            <li class="first-li"><a href="#">Contactos</a></li>
           		</ul>
 			</nav><!-- header-nav -->
 			<div class="title-header">
@@ -30,6 +31,7 @@
 				<p>Productos diseñados para tu hogar pensando en ti.</p>
 			</div>
 			<button><a href="">Nuestros Productos</a></button>
-		</header>	
+		</header>
+		
 	</body>
 </html>
