--- a/index.html
+++ b/index.html
@@ -32,6 +32,23 @@
 			</div>
 			<button><a href="">Nuestros Productos</a></button>
 		</header>
-		
+
+		<!--Aqui van <sections> para las secciones -->
+
+		<footer>
+			<div class="contacts">
+				<p><a href="#">(000) 0000-0000</a><br/>
+				<a href="#">(111) 1111-1111</a></p>
+				<p><a href="#">lailuminada@gmail.com</a></p>
+			</div>
+			<a href="#" class="logo-central"><img class="logo-footer" src="img/lailuminada.png"></a>
+			<div class="social-network">
+				<ul>
+					<li class="foot-facebook"><a href="#">Facebook</a></li>
+					<li class="foot-twiter"><a href="#">Twitter</a></li>
+					<li class="foot-facebook"><a href="#">Other</a></li>
+				</ul>
+			</div>
+		</footer>
 	</body>
 </html>
