Se terminó el footer

--- a/productos/productos.html
+++ b/productos/productos.html
@@ -7,11 +7,11 @@
 	<body>
 		<header class="header-products">
 			<nav class="header-nav">
-				<a href="#"><img class="logo" src="../img/lailuminada.png"></a>
 				<ul class="first-nav">
-		            <li><a href="#">Inicio</a></li>
-		            <li><a href="#">Productos</a>
-			            <ul>
+					<li class="li-logo"><a href="#"><img class="logo" src="../img/lailuminada.png"></a></li>
+		            <li class="first-li"><a href="#">Inicio</a></li>
+		            <li class="first-li"><a href="#">Productos</a>
+			            <ul class="sub-menu">
 			            	<li><a href="#">Todos los Productos</a></li>
 				            <li><a href="#">Luces de Exterior</a></li>
 				            <li><a href="#">Luces de interior</a></li>
@@ -19,9 +19,9 @@
 				            <li><a href="#">Luces de habitacion</a></li>  
 			            </ul>
 		            </li>
-		            <li><a href="#">Proyectos</a></li>
-		            <li><a href="#">Noticias</a></li>
-		            <li><a href="#">Contactos</a></li>
+		            <li class="first-li"><a href="#">Proyectos</a></li>
+		            <li class="first-li"><a href="#">Noticias</a></li>
+		            <li class="first-li"><a href="#">Contactos</a></li>
           		</ul>
 			</nav><!-- header-nav -->
 			<div class="title-header-products">
@@ -119,17 +119,17 @@
 			</div>
 		</section>
 		<footer>
-			<div>
-				<a href="#">00000000</a>
-				<a href="#">00000000</a>
-				<a href="#">corre0</a>
+			<div class="contacts">
+				<p><a href="#">(000) 0000-0000</a><br/>
+				<a href="#">(111) 1111-1111</a></p>
+				<p><a href="#">lailuminada@gmail.com</a></p>
 			</div>
-			<a href="#"><img class="logo" src="../img/lailuminada.png"></a>
-			<div>
+			<a href="#" class="logo-central"><img class="logo-footer" src="../img/lailuminada.png"></a>
+			<div class="social-network">
 				<ul>
-					<li class="footer-social"></li>
-					<li class="footer-social"></li>
-					<li class="footer-social"></li>
+					<li class="foot-facebook"><a href="#">Facebook</a></li>
+					<li class="foot-twiter"><a href="#">Twitter</a></li>
+					<li class="foot-facebook"><a href="#">Other</a></li>
 				</ul>
 			</div>
 		</footer>
