--- a/productos/productos.html
+++ b/productos/productos.html
@@ -3,6 +3,7 @@
 		<meta charset="UTF-8">
 		<title>Productos - La Iluminada</title>
 		<link rel="stylesheet" type="text/css" href="../css/styles.css">
+		<link rel="stylesheet" type="text/css" href="../css/hover-especial.css">
 	</head>
 	<body>
 		<header class="header-products">
@@ -36,84 +37,84 @@
 			Nullam eu orci placerat, posuere augue vehicula, semper leo. 
 			</p>
 			<div class="div-category">
-				<div class="div-cat-principal">
-					<div class="deco-top"></div>
-					<div class="deco-lower"></div>
+				<div class="div-cat div-cat-principal">
+					<img src="../img/kamal_Aplique.JPG">
+					<div class="deco deco-top"></div>
+					<div class="deco deco-lower"></div>
 					<div class="div-information">
-					<div>
 						<h3>Circle bell</h3>
 						<p>Cada bombilla LED se codifica con una carta para ayudarle a identificar la forma perfecta para su fijación.</p>
 						<a href="">Ver más</a>
 					</div>
 				</div><!-- div-cat-principal -->
-				<div class="div-cat-principal">
-					<div class="deco-top"></div>
-					<div class="deco-lower"></div>
+				<div class="div-cat div-cat-principal">
+					<img src="../img/kamal_Aplique.JPG">
+					<div class="deco deco-top"></div>
+					<div class="deco deco-lower"></div>
 					<div class="div-information">
-					<div>
-						<h3>Circle bell double</h3>
-						<p>Cada bombilla LED se codifica con una carta para ayudarle a identificar la forma perfecta para su fijación.</p>
-						<a href="">Ver más</a>
-					</div>
-				</div><!-- div-cat-principal -->
-				<div class="div-cat-principal">
-					<div class="deco-top"></div>
-					<div class="deco-lower"></div>
-					<div class="div-information">
-					<div>
-						<h3>Grass Espontaneus</h3>
-						<p>Cada bombilla LED se codifica con una carta para ayudarle a identificar la forma perfecta para su fijación.</p>
-						<a href="">Ver más</a>
-					</div>
-				</div><!-- div-cat-principal -->
-				<div class="div-cat-principal">
-					<div class="deco-top"></div>
-					<div class="deco-lower"></div>
-					<div class="div-information">
-					<div>
-						<h3>Light block</h3>
-						<p>Cada bombilla LED se codifica con una carta para ayudarle a identificar la forma perfecta para su fijación.</p>
-						<a href="">Ver más</a>
-					</div>
-				</div><!-- div-cat-principal -->
-				<div class="div-cat-principal">
-					<div class="deco-top"></div>
-					<div class="deco-lower"></div>
-					<div class="div-information">
-					<div>
-						<h3>Led Air</h3>
-						<p>Cada bombilla LED se codifica con una carta para ayudarle a identificar la forma perfecta para su fijación.</p>
-						<a href="">Ver más</a>
-					</div>
-				</div><!-- div-cat-principal -->
-				<div class="div-cat-principal">
-					<div class="deco-top"></div>
-					<div class="deco-lower"></div>
-					<div class="div-information">
-					<div>
-						<h3>Alumbrado Público</h3>
-						<p>Cada bombilla LED se codifica con una carta para ayudarle a identificar la forma perfecta para su fijación.</p>
-						<a href="">Ver más</a>
-					</div>
-				</div><!-- div-cat-principal -->
-				<div class="div-cat-principal">
-					<div class="deco-top"></div>
-					<div class="deco-lower"></div>
-					<div class="div-information">
-					<div>
 						<h3>Circle bell</h3>
 						<p>Cada bombilla LED se codifica con una carta para ayudarle a identificar la forma perfecta para su fijación.</p>
 						<a href="">Ver más</a>
 					</div>
 				</div><!-- div-cat-principal -->
-				<div class="div-cat-principal">
-					<div class="deco-top"></div>
-					<div class="deco-lower"></div>
+				<div class="div-cat div-cat-principal">
+					<img src="../img/kamal_Aplique.JPG">
+					<div class="deco deco-top"></div>
+					<div class="deco deco-lower"></div>
 					<div class="div-information">
-					<div>
 						<h3>Circle bell</h3>
 						<p>Cada bombilla LED se codifica con una carta para ayudarle a identificar la forma perfecta para su fijación.</p>
-						<a href="">Ver más</a>>
+						<a href="">Ver más</a>
+					</div>
+				</div><!-- div-cat-principal -->
+				<div class="div-cat div-cat-principal">
+					<img src="../img/kamal_Aplique.JPG">
+					<div class="deco deco-top"></div>
+					<div class="deco deco-lower"></div>
+					<div class="div-information">
+						<h3>Circle bell</h3>
+						<p>Cada bombilla LED se codifica con una carta para ayudarle a identificar la forma perfecta para su fijación.</p>
+						<a href="">Ver más</a>
+					</div>
+				</div><!-- div-cat-principal -->
+				<div class="div-cat div-cat-principal">
+					<img src="../img/kamal_Aplique.JPG">
+					<div class="deco deco-top"></div>
+					<div class="deco deco-lower"></div>
+					<div class="div-information">
+						<h3>Circle bell</h3>
+						<p>Cada bombilla LED se codifica con una carta para ayudarle a identificar la forma perfecta para su fijación.</p>
+						<a href="">Ver más</a>
+					</div>
+				</div><!-- div-cat-principal -->
+				<div class="div-cat div-cat-principal">
+					<img src="../img/kamal_Aplique.JPG">
+					<div class="deco deco-top"></div>
+					<div class="deco deco-lower"></div>
+					<div class="div-information">
+						<h3>Circle bell</h3>
+						<p>Cada bombilla LED se codifica con una carta para ayudarle a identificar la forma perfecta para su fijación.</p>
+						<a href="">Ver más</a>
+					</div>
+				</div><!-- div-cat-principal -->
+				<div class="div-cat div-cat-principal">
+					<img src="../img/kamal_Aplique.JPG">
+					<div class="deco deco-top"></div>
+					<div class="deco deco-lower"></div>
+					<div class="div-information">
+						<h3>Circle bell</h3>
+						<p>Cada bombilla LED se codifica con una carta para ayudarle a identificar la forma perfecta para su fijación.</p>
+						<a href="">Ver más</a>
+					</div>
+				</div><!-- div-cat-principal -->
+				<div class="div-cat div-cat-principal">
+					<img src="../img/kamal_Aplique.JPG">
+					<div class="deco deco-top"></div>
+					<div class="deco deco-lower"></div>
+					<div class="div-information">
+						<h3>Circle bell</h3>
+						<p>Cada bombilla LED se codifica con una carta para ayudarle a identificar la forma perfecta para su fijación.</p>
+						<a href="">Ver más</a>
 					</div>
 				</div><!-- div-cat-principal -->
 			</div>
