Se ajustaron los estilos de la galería

--- a/productos/productos.html
+++ b/productos/productos.html
@@ -42,7 +42,7 @@
 					<div class="deco deco-top"></div>
 					<div class="deco deco-lower"></div>
 					<div class="div-information">
-						<h3>Circle bell</h3>
+						<h3>Circle Bell</h3>
 						<p>Cada bombilla LED se codifica con una carta para ayudarle a identificar la forma perfecta para su fijación.</p>
 						<a href="">Ver más</a>
 					</div>
@@ -52,7 +52,7 @@
 					<div class="deco deco-top"></div>
 					<div class="deco deco-lower"></div>
 					<div class="div-information">
-						<h3>Circle bell</h3>
+						<h3>Circle Bell Dúo</h3>
 						<p>Cada bombilla LED se codifica con una carta para ayudarle a identificar la forma perfecta para su fijación.</p>
 						<a href="">Ver más</a>
 					</div>
@@ -62,7 +62,7 @@
 					<div class="deco deco-top"></div>
 					<div class="deco deco-lower"></div>
 					<div class="div-information">
-						<h3>Circle bell</h3>
+						<h3>Grass Air</h3>
 						<p>Cada bombilla LED se codifica con una carta para ayudarle a identificar la forma perfecta para su fijación.</p>
 						<a href="">Ver más</a>
 					</div>
@@ -72,7 +72,7 @@
 					<div class="deco deco-top"></div>
 					<div class="deco deco-lower"></div>
 					<div class="div-information">
-						<h3>Circle bell</h3>
+						<h3>Zodiac Led</h3>
 						<p>Cada bombilla LED se codifica con una carta para ayudarle a identificar la forma perfecta para su fijación.</p>
 						<a href="">Ver más</a>
 					</div>
@@ -82,7 +82,7 @@
 					<div class="deco deco-top"></div>
 					<div class="deco deco-lower"></div>
 					<div class="div-information">
-						<h3>Circle bell</h3>
+						<h3>Sally Iluminate</h3>
 						<p>Cada bombilla LED se codifica con una carta para ayudarle a identificar la forma perfecta para su fijación.</p>
 						<a href="">Ver más</a>
 					</div>
@@ -92,7 +92,7 @@
 					<div class="deco deco-top"></div>
 					<div class="deco deco-lower"></div>
 					<div class="div-information">
-						<h3>Circle bell</h3>
+						<h3>Sanjay Tan</h3>
 						<p>Cada bombilla LED se codifica con una carta para ayudarle a identificar la forma perfecta para su fijación.</p>
 						<a href="">Ver más</a>
 					</div>
@@ -102,7 +102,7 @@
 					<div class="deco deco-top"></div>
 					<div class="deco deco-lower"></div>
 					<div class="div-information">
-						<h3>Circle bell</h3>
+						<h3>Circle Red Dention</h3>
 						<p>Cada bombilla LED se codifica con una carta para ayudarle a identificar la forma perfecta para su fijación.</p>
 						<a href="">Ver más</a>
 					</div>
@@ -112,7 +112,7 @@
 					<div class="deco deco-top"></div>
 					<div class="deco deco-lower"></div>
 					<div class="div-information">
-						<h3>Circle bell</h3>
+						<h3>Circle Post</h3>
 						<p>Cada bombilla LED se codifica con una carta para ayudarle a identificar la forma perfecta para su fijación.</p>
 						<a href="">Ver más</a>
 					</div>
