--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
 	</head>
 	<body>
 		<header class="header-home">
+			<a href="#"><img class="logo" src="img/lailuminada.png"></a>
 			<nav class="header-nav">
 				
 				<ul class="first-nav">
-					<li class="li-logo"><a href="#"><img class="logo" src="img/lailuminada.png"></a></li>
 		            <li class="first-li"><a href="#">Inicio</a></li>
 		            <li class="first-li"><a href="#">Productos</a>
 			            <ul class="sub-menu">
@@ -30,7 +30,7 @@
 				<h1>Iluminando tu vida</h1>
 				<p>Productos diseñados para tu hogar pensando en ti.</p>
 			</div>
-			<button><a href="">Nuestros Productos</a></button>
+				<p class="header-button"><a class="button-products" href="#">Nuestros Productos</a></p>
 		</header>
 
 		<!--Aqui van <sections> para las secciones -->
