Se encadenó los estilos a las demás páginas de produvtos

--- a/productos/productos.html
+++ b/productos/productos.html
@@ -7,34 +7,36 @@
 	</head>
 	<body>
 		<header class="header-products">
+			<a href="#"><img class="logo" src="../img/lailuminada.png"></a>
 			<nav class="header-nav">
 				<ul class="first-nav">
-					<li class="li-logo"><a href="#"><img class="logo" src="../img/lailuminada.png"></a></li>
-		            <li class="first-li"><a href="#">Inicio</a></li>
+		            <li class="first-li"><a href="../index.html">Inicio</a></li>
 		            <li class="first-li"><a href="#">Productos</a>
 			            <ul class="sub-menu">
-			            	<li><a href="#">Todos los Productos</a></li>
-				            <li><a href="#">Luces de Exterior</a></li>
-				            <li><a href="#">Luces de interior</a></li>
-				            <li><a href="#">Luces led</a></li>
-				            <li><a href="#">Luces de habitacion</a></li>  
+			            	<li><a href="productos.html">Todos los Productos</a></li>
+				            <li><a href="luces-exterior.html">Luces de Exterior</a></li>
+				            <li><a href="luces-interior.html">Luces de interior</a></li>
+				            <li><a href="luces-led.html">Luces led</a></li>
+				            <li><a href="luces-habitacion.html">Luces de habitacion</a></li>   
 			            </ul>
 		            </li>
-		            <li class="first-li"><a href="#">Proyectos</a></li>
+		            <li class="first-li"><a href="../proyectos/proyectos.html">Proyectos</a></li>
 		            <li class="first-li"><a href="#">Noticias</a></li>
 		            <li class="first-li"><a href="#">Contactos</a></li>
           		</ul>
-			</nav><!-- header-nav -->
+          	</nav>
 			<div class="title-header-products">
 			    <h1>Productos</h1>
 
-			    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean rutrum, urna eget rhoncus congue, augue erat porttitor purus, non iaculis tellus ex eget metus.</p>
+			    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean rutrum, urna eget rhoncus congue, augue erat porttitor purus, non iaculis tellus ex eget metus. Consectetur adipiscing elit.
+				Nullam eu orci placerat, posuere augue vehicula, semper leo. Pellentesque tincidunt euismod massa eu rhoncus. Donec mattis ante in consectetur congue. Aliquam elementum pharetra quam faucibus accumsan.</p>
+				<p> Maecenas massa odio, ornare a condimentum id, egestas sed libero. Aenean sit amet risus sed nisi consequat molestie eget non mi. Vivamus faucibus lacinia ex. Ut commodo sit amet nulla non auctor. Praesent sit amet rhoncus nisi, et imperdiet metus. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p>
 			</div><!-- title-header -->
 		</header>
-		<section class="section-content">
+		<section class="subsection subsection-products"><!-- es importante poner la clase subsection en cada sección -->
 			<h2>Todos los Productos</h2>
 			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.<br/>
-			Nullam eu orci placerat, posuere augue vehicula, semper leo. 
+			Nullam eu orci placerat, posuere augue vehicula, semper leo. ornare a condimentum id, egestas sed libero. Aenean sit amet risus sed nisi consequat molestie eget non mi. Vivamus faucibus lacinia ex. Ut commodo sit amet nulla non auctor. Praesent sit amet rhoncus nisi, et imperdiet metus. 
 			</p>
 			<div class="div-category">
 				<div class="div-cat div-cat-principal">
@@ -117,6 +119,7 @@
 						<a href="">Ver más</a>
 					</div>
 				</div><!-- div-cat-principal -->
+
 			</div>
 		</section>
 		<footer>
