--- a/productos/luces-exterior.html
+++ b/productos/luces-exterior.html
@@ -3,131 +3,137 @@
 		<meta charset="UTF-8">
 		<title>Luces de Exterior - La Iluminada</title>
 		<link rel="stylesheet" type="text/css" href="../css/styles.css">
+		<link rel="stylesheet" type="text/css" href="../css/hover-especial.css">
 	</head>
 	<body>
 		<header class="header-products">
+			<a href="#"><img class="logo" src="../img/lailuminada.png"></a>
 			<nav class="header-nav">
-				<a href="#"><img src="../img/lailuminada.png"></a>
-				<ul>
-		            <li><a href="#">Inicio</a></li>
-		            <li><a href="#">Productos</a>
-			            <ul>
-			            	<li><a href="#">Todos los Productos</a></li>
-				            <li><a href="#">Luces de Exterior</a></li>
-				            <li><a href="#">Luces de interior</a></li>
-				            <li><a href="#">Luces led</a></li>
-				            <li><a href="#">Luces de habitacion</a></li>  
+				<ul class="first-nav">
+		            <li class="first-li"><a href="../index.html">Inicio</a></li>
+		            <li class="first-li"><a href="#">Productos</a>
+			            <ul class="sub-menu">
+			            	<li><a href="productos.html">Todos los Productos</a></li>
+				            <li><a href="luces-exterior.html">Luces de Exterior</a></li>
+				            <li><a href="luces-interior.html">Luces de interior</a></li>
+				            <li><a href="luces-led.html">Luces led</a></li>
+				            <li><a href="luces-habitacion.html">Luces de habitacion</a></li>  
 			            </ul>
 		            </li>
-		            <li><a href="#">Proyectos</a></li>
-		            <li><a href="#">Noticias</a></li>
-		            <li><a href="#">Contactos</a></li>
+		            <li class="first-li"><a href="../proyectos/proyectos.html">Proyectos</a></li>
+		            <li class="first-li"><a href="#">Noticias</a></li>
+		            <li class="first-li"><a href="#">Contactos</a></li>
           		</ul>
-			</nav><!-- header-nav -->
-			<div class="title-header">
-			    <h1>Productos</h1>
+          	</nav>
+			<div class="title-header-products">
+			    <h1>Productos / Luces de Exterior</h1>
 
-			    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean rutrum, urna eget rhoncus congue, augue erat porttitor purus, non iaculis tellus ex eget metus. Proin sollicitudin pretium sem sed dapibus. Etiam commodo vulputate nisl vel pharetra. Nulla vehicula lobortis arcu non fermentum. </p>
+			    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean rutrum, urna eget rhoncus congue, augue erat porttitor purus, non iaculis tellus ex eget metus. Consectetur adipiscing elit.
+				Nullam eu orci placerat, posuere augue vehicula, semper leo. Pellentesque tincidunt euismod massa eu rhoncus. Donec mattis ante in consectetur congue. Aliquam elementum pharetra quam faucibus accumsan.</p>
+				<p> Maecenas massa odio, ornare a condimentum id, egestas sed libero. Aenean sit amet risus sed nisi consequat molestie eget non mi. Vivamus faucibus lacinia ex. Ut commodo sit amet nulla non auctor. Praesent sit amet rhoncus nisi, et imperdiet metus. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p>
 			</div><!-- title-header -->
 		</header>
-		<content>
-			<h2>Todos los Productos</h2>
-			<p class="paragraph-category"></p>
+		<section class="subsection subsection-products"><!-- es importante poner la clase subsection en cada sección -->
+			<h2>Luces de Exterior</h2>
+			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.<br/>
+			Nullam eu orci placerat, posuere augue vehicula, semper leo. ornare a condimentum id, egestas sed libero. Aenean sit amet risus sed nisi consequat molestie eget non mi. Vivamus faucibus lacinia ex. Ut commodo sit amet nulla non auctor. Praesent sit amet rhoncus nisi, et imperdiet metus. 
+			</p>
 			<div class="div-category">
-				<div class="div-cat-principal">
-					<div class="deco-top"></div>
-					<div class="deco-lower"></div>
+				<div class="div-cat div-cat-principal">
+					<img src="../img/kamal_Aplique.JPG">
+					<div class="deco deco-top"></div>
+					<div class="deco deco-lower"></div>
 					<div class="div-information">
-					<div>
-						<h3>Circle bell</h3>
+						<h3>Circle Bell</h3>
 						<p>Cada bombilla LED se codifica con una carta para ayudarle a identificar la forma perfecta para su fijación.</p>
 						<a href="">Ver más</a>
 					</div>
 				</div><!-- div-cat-principal -->
-				<div class="div-cat-principal">
-					<div class="deco-top"></div>
-					<div class="deco-lower"></div>
+				<div class="div-cat div-cat-principal">
+					<img src="../img/kamal_Aplique.JPG">
+					<div class="deco deco-top"></div>
+					<div class="deco deco-lower"></div>
 					<div class="div-information">
-					<div>
-						<h3>Circle bell double</h3>
+						<h3>Circle Bell Dúo</h3>
 						<p>Cada bombilla LED se codifica con una carta para ayudarle a identificar la forma perfecta para su fijación.</p>
 						<a href="">Ver más</a>
 					</div>
 				</div><!-- div-cat-principal -->
-				<div class="div-cat-principal">
-					<div class="deco-top"></div>
-					<div class="deco-lower"></div>
+				<div class="div-cat div-cat-principal">
+					<img src="../img/kamal_Aplique.JPG">
+					<div class="deco deco-top"></div>
+					<div class="deco deco-lower"></div>
 					<div class="div-information">
-					<div>
-						<h3>Grass Espontaneus</h3>
+						<h3>Grass Air</h3>
 						<p>Cada bombilla LED se codifica con una carta para ayudarle a identificar la forma perfecta para su fijación.</p>
 						<a href="">Ver más</a>
 					</div>
 				</div><!-- div-cat-principal -->
-				<div class="div-cat-principal">
-					<div class="deco-top"></div>
-					<div class="deco-lower"></div>
+				<div class="div-cat div-cat-principal">
+					<img src="../img/kamal_Aplique.JPG">
+					<div class="deco deco-top"></div>
+					<div class="deco deco-lower"></div>
 					<div class="div-information">
-					<div>
-						<h3>Light block</h3>
+						<h3>Zodiac Led</h3>
 						<p>Cada bombilla LED se codifica con una carta para ayudarle a identificar la forma perfecta para su fijación.</p>
 						<a href="">Ver más</a>
 					</div>
 				</div><!-- div-cat-principal -->
-				<div class="div-cat-principal">
-					<div class="deco-top"></div>
-					<div class="deco-lower"></div>
+				<div class="div-cat div-cat-principal">
+					<img src="../img/kamal_Aplique.JPG">
+					<div class="deco deco-top"></div>
+					<div class="deco deco-lower"></div>
 					<div class="div-information">
-					<div>
-						<h3>Led Air</h3>
+						<h3>Sally Iluminate</h3>
 						<p>Cada bombilla LED se codifica con una carta para ayudarle a identificar la forma perfecta para su fijación.</p>
 						<a href="">Ver más</a>
 					</div>
 				</div><!-- div-cat-principal -->
-				<div class="div-cat-principal">
-					<div class="deco-top"></div>
-					<div class="deco-lower"></div>
+				<div class="div-cat div-cat-principal">
+					<img src="../img/kamal_Aplique.JPG">
+					<div class="deco deco-top"></div>
+					<div class="deco deco-lower"></div>
 					<div class="div-information">
-					<div>
-						<h3>Alumbrado Público</h3>
+						<h3>Sanjay Tan</h3>
 						<p>Cada bombilla LED se codifica con una carta para ayudarle a identificar la forma perfecta para su fijación.</p>
 						<a href="">Ver más</a>
 					</div>
 				</div><!-- div-cat-principal -->
-				<div class="div-cat-principal">
-					<div class="deco-top"></div>
-					<div class="deco-lower"></div>
+				<div class="div-cat div-cat-principal">
+					<img src="../img/kamal_Aplique.JPG">
+					<div class="deco deco-top"></div>
+					<div class="deco deco-lower"></div>
 					<div class="div-information">
-					<div>
-						<h3>Circle bell</h3>
+						<h3>Circle Red Dention</h3>
 						<p>Cada bombilla LED se codifica con una carta para ayudarle a identificar la forma perfecta para su fijación.</p>
 						<a href="">Ver más</a>
 					</div>
 				</div><!-- div-cat-principal -->
-				<div class="div-cat-principal">
-					<div class="deco-top"></div>
-					<div class="deco-lower"></div>
+				<div class="div-cat div-cat-principal">
+					<img src="../img/kamal_Aplique.JPG">
+					<div class="deco deco-top"></div>
+					<div class="deco deco-lower"></div>
 					<div class="div-information">
-					<div>
-						<h3>Circle bell</h3>
+						<h3>Circle Post</h3>
 						<p>Cada bombilla LED se codifica con una carta para ayudarle a identificar la forma perfecta para su fijación.</p>
-						<a href="">Ver más</a>>
+						<a href="">Ver más</a>
 					</div>
 				</div><!-- div-cat-principal -->
+
 			</div>
-		</content>
+		</section>
 		<footer>
-			<div>
-				<a>00000000</a>
-				<a>00000000</a>
-				<a>corre0</a>
+			<div class="contacts">
+				<p><a href="#">(000) 0000-0000</a><br/>
+				<a href="#">(111) 1111-1111</a></p>
+				<p><a href="#">lailuminada@gmail.com</a></p>
 			</div>
-			<img src="#">
-			<div>
+			<a href="#" class="logo-central"><img class="logo-footer" src="../img/lailuminada.png"></a>
+			<div class="social-network">
 				<ul>
-					<li class="footer-social"></li>
-					<li class="footer-social"></li>
-					<li class="footer-social"></li>
+					<li class="foot-facebook"><a href="#">Facebook</a></li>
+					<li class="foot-twiter"><a href="#">Twitter</a></li>
+					<li class="foot-facebook"><a href="#">Other</a></li>
 				</ul>
 			</div>
 		</footer>
