Se agregó las secciones de Noticias y Contactos

--- a/index.html
+++ b/index.html
@@ -127,8 +127,8 @@
 		</section>
 		<section class="subsection subsection-projects-news">
 			<h2>Noticias</h2>
-			<p>Nullam eu orci placerat, posuere augue vehicula, semper leo. ornare a condimentum id, egestas sed libero. Aenean sit amet risus sed nisi consequat molestie eget non mi. Vivamus faucibus lacinia ex. Ut commodo sit amet nulla non auctor. Praesent sit amet rhoncus nisi, et imperdiet metus.<br>
-			 
+			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.<br>
+			Nullam eu orci placerat, posuere augue vehicula, semper leo. ornare a condimentum id, egestas sed libero. Aenean sit amet risus sed nisi consequat molestie eget non mi. Vivamus faucibus lacinia ex. Ut commodo sit amet nulla non auctor. Praesent sit amet rhoncus nisi, et imperdiet metus. 
 			</p>
 			<div class="div-projects-news">
 				<div class="div-projects-news-title">
@@ -154,7 +154,8 @@
 		</section>
 		<section class="subsection subsection-contacts">
 			<h2>Contáctenos</h2>
-			<p>Nullam eu orci placerat, posuere augue vehicula, semper leo. ornare a condimentum id, egestas sed libero. Aenean sit amet risus sed nisi consequat molestie eget non mi. Vivamus faucibus lacinia ex. Ut commodo sit amet nulla non auctor. Praesent sit amet rhoncus nisi, et imperdiet metus.<br>
+			<p>Del perro Hechado 10mts al Norte, por el palo de Mango, Cerca de la Casa Roja de Doña Adela, <br/>
+			San Gargarito Arrinconado Centro.</p>
 		</section>
 		<footer>
 			<div class="contacts">
