seccion del about

--- a/index.html
+++ b/index.html
@@ -34,6 +34,17 @@
 				<p class="header-button"><a class="button-products" href="#">Nuestros Productos</a></p>
 		</header>
 
+		<section class="subsection subsection-about">
+			<h2>Acerca de nosotros</h2>
+			<p>Duis tristique quam ut urna accumsan, id consectetur odio interdum. 
+			Mauris quis feugiat magna. Ut imperdiet faucibus suscipit. Aenean sed 
+			Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+			Nullam eu orci placerat, posuere augue vehicula, semper leo. Mauris quis feugiat magna.
+			Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+			Nullam eu orci placerat, posuere augue vehicula, semper leo.<br><br>Lorem ipsum dolor sit amet, ut imperdiet faucibus suscipit. Aenean sed gravida neque consectetur adipiscing elit. Nullam eu orci placerat, posuere augue vehicula, tristique urna accumsan, id consectetur odio interdum consectetur adipiscing elit.</p>
+			<img src="img/ligth-about.png">
+		</section>
+
 		<!--Aqui van <sections> para las secciones -->
 
 		<section class="subsection subsection-products"><!-- es importante poner la clase subsection en cada sección -->
